--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   dio: ^5.3.0
   get_it: ^7.6.0
   shared_preferences: ^2.2.0
+  json_serializable: ^6.7.1
+  build_runner: ^2.4.6
 
 dev_dependencies:
   flutter_test:
