--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+3
+version: 1.0.0+4
 
 environment:
   sdk: ">=3.0.0"
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.2.0
   json_serializable: ^6.7.1
   build_runner: ^2.4.6
+  google_fonts: ^5.1.0
 
 dev_dependencies:
   flutter_test:
