--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   json_serializable: ^6.7.1
   build_runner: ^2.4.6
   google_fonts: ^5.1.0
+  flutter_riverpod: ^2.3.6
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
