chore:update UI

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
         android:label="MailMemo"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
+        <uses-permission android:name="android.permission.INTERNET" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
