--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,12 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
         <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:label="MailMemo"
+        android:label="SimpleMemo"
         android:name="${applicationName}"
         android:allowBackup="false"
         android:fullBackupContent="false"
         android:fullBackupOnly="false"
         android:icon="@mipmap/launcher_icon">
+         <meta-data
+      android:name="com.google.android.gms.ads.APPLICATION_ID"
+      android:value="ca-app-pub-5245116717044907~3771332501"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
